* 全局取消静态文件CND

--- a/core/app/views/Accounts/blank.html
+++ b/core/app/views/Accounts/blank.html
@@ -1,7 +1,7 @@
 #{extends 'main.html'/}
 #{set title:'添加新用户'/}
 #{set 'moreScripts'}
-    #{script_cdn name: 'accounts/index.coffee'/}
+    #{script name: 'accounts/index.coffee'/}
 #{/set}
 <div class="row">
 #{errorMsgs /}
