--- a/core/app/views/Accounts/index.html
+++ b/core/app/views/Accounts/index.html
@@ -1,7 +1,7 @@
 #{extends 'main_full.html'/}
 #{set title:'用户管理'/}
 #{set 'moreScripts'}
-    #{script_cdn  name: 'accounts/index.coffee'/}
+    #{script  name: 'accounts/index.coffee'/}
 #{/set}
 
 <div class="row-fluid" style="margin-bottom:10px;">
