--- a/core/app/views/Activitis/definition.html
+++ b/core/app/views/Activitis/definition.html
@@ -1,10 +1,10 @@
 #{extends 'main_full.html'/}
 #{set title:'流程定义'/}
 #{set 'moreStyles'}
-    #{stylesheet_cdn name:'feetypes.css'/}
+    #{stylesheet name:'feetypes.css'/}
 #{/set}
 #{set 'moreScripts'}
-    #{script_cdn name: 'activitis/definition.coffee'/}
+    #{script name: 'activitis/definition.coffee'/}
 #{/set}
 #{info_row title:'流程定义' /}
 
