--- a/core/app/views/Activitis/index.html
+++ b/core/app/views/Activitis/index.html
@@ -1,7 +1,7 @@
 #{extends 'main_full.html'/}
 #{set title:'待处理流程' /}
 #{set 'moreScripts'}
-    #{script_cdn name: 'activitis/index.coffee'/}
+    #{script name: 'activitis/index.coffee'/}
 #{/set}
 
 #{errorMsgs /}
