--- a/core/app/views/Analyzes/index.html
+++ b/core/app/views/Analyzes/index.html
@@ -1,11 +1,11 @@
 #{extends 'main_full.html'/}
 #{set title:'Analyze'/}
 #{set 'moreScripts'}
-    #{script_cdn name: 'jquery.dataTables.js'/}
-    #{script_cdn name: 'highstock.js'/}
-    #{script_cdn name: 'timeline/timeline_js/timeline-api.js'/}
-    #{script_cdn name: 'analyzes/timeline.coffee'/}
-    #{script_cdn name: 'analyzes/analyzes.coffee'/}
+    #{script name: 'jquery.dataTables.js'/}
+    #{script name: 'highstock.js'/}
+    #{script name: 'timeline/timeline_js/timeline-api.js'/}
+    #{script name: 'analyzes/timeline.coffee'/}
+    #{script name: 'analyzes/analyzes.coffee'/}
 #{/set}
 
 <div class="tabbable tabs-left">
