--- a/core/app/views/CheckTasks/showactiviti.html
+++ b/core/app/views/CheckTasks/showactiviti.html
@@ -1,6 +1,6 @@
 #{render '_css_header.html' /}
 #{render '_js_header.html' /}
-#{script_cdn name: 'procureunits/blank.coffee'/}
+#{script name: 'procureunits/blank.coffee'/}
 
 
 #{errorMsgs /}
