--- a/core/app/views/Cooperators/show.html
+++ b/core/app/views/Cooperators/show.html
@@ -1,4 +1,4 @@
-#{script_cdn name: 'cooperators/show.coffee'/}
+#{script name: 'cooperators/show.coffee'/}
 
 #{if flash.success}
 <div class="row-fluid">
