--- a/core/app/views/DeliverPlans/show.html
+++ b/core/app/views/DeliverPlans/show.html
@@ -1,12 +1,12 @@
 #{extends 'main_full.html'/}
 #{set title:"出货单 #" + dp.id /}
 #{set 'moreScripts'}
-    #{script_cdn name: 'jquery.filedrop.js'/}
-    #{script_cdn name: 'component/dropUpload.coffee'/}
-    #{script_cdn name: 'timeline/timeline_js/timeline-api.js'/}
-    #{script_cdn name: 'analyzes/timeline.coffee'/}
-    #{script_cdn name: 'deliveryments/show.coffee'/}
-    #{script_cdn name: 'deliverplans/show.coffee'/}
+    #{script name: 'jquery.filedrop.js'/}
+    #{script name: 'component/dropUpload.coffee'/}
+    #{script name: 'timeline/timeline_js/timeline-api.js'/}
+    #{script name: 'analyzes/timeline.coffee'/}
+    #{script name: 'deliveryments/show.coffee'/}
+    #{script name: 'deliverplans/show.coffee'/}
 #{/set}
 
 #{errorMsgs /}
