--- a/core/app/views/Listings/listing.html
+++ b/core/app/views/Listings/listing.html
@@ -1,7 +1,7 @@
 #{extends 'main.html'/}
 #{set title:'Listing Info'/}
 #{set 'moreScripts'}
-    #{script_cdn name: 'listings/listings.coffee'/}
+    #{script name: 'listings/listings.coffee'/}
 #{/set}
 
 <ul id="listingTab" class="nav nav-tabs">
