--- a/core/app/views/Notifications/index.html
+++ b/core/app/views/Notifications/index.html
@@ -2,7 +2,7 @@
 
 #{set title:"通知信息列表" /}
 #{set 'moreScripts'}
-    #{script_cdn name: 'component/pagination.coffee'/}
+    #{script name: 'component/pagination.coffee'/}
 #{/set}
 
 #{info_row title:"Notifications"/}
