--- a/core/app/views/Reviews/show.html
+++ b/core/app/views/Reviews/show.html
@@ -1,7 +1,7 @@
 #{extends 'main.html'/}
 #{set title:'Review #' + review.reviewId /}
 #{set 'moreScripts'}
-    #{script_cdn name: 'reviews/show.coffee'/}
+    #{script name: 'reviews/show.coffee'/}
 #{/set}
 
 <!-- Review -->
