--- a/core/app/views/SaleOpTargets/blank.html
+++ b/core/app/views/SaleOpTargets/blank.html
@@ -1,7 +1,7 @@
 #{extends 'main.html' /}
 #{set title:"新增运营年度目标"/}
 #{set 'moreScripts'}
-    #{script_cdn name: 'saleOpTargets/blank.coffee'/}
+    #{script name: 'saleOpTargets/blank.coffee'/}
 #{/set}
 #{errorMsgs /}
 #{flash_alert /}
