--- a/core/app/views/SaleOpTargets/marketView.html
+++ b/core/app/views/SaleOpTargets/marketView.html
@@ -1,7 +1,7 @@
 #{extends 'main_full.html' /}
 #{set title:"Category销售目标#" + categorySt.id /}
 #{set 'moreScripts'}
-    #{script_cdn name: 'saleOpTargets/marketsplit.coffee'/}
+    #{script name: 'saleOpTargets/marketsplit.coffee'/}
 #{/set}
 
 #{errorMsgs /}
