--- a/core/app/views/SaleReports/saleCount.html
+++ b/core/app/views/SaleReports/saleCount.html
@@ -1,7 +1,7 @@
 #{extends 'main_full.html'/}
 #{set title:'产品销售统计报表'/}
 #{set 'moreScripts'}
-    #{script_cdn name: 'SaleReports/saleCount.coffee'/}
+    #{script name: 'SaleReports/saleCount.coffee'/}
 #{/set}
 
 #{flash_alert /}
