--- a/core/app/views/Sellings/blank.html
+++ b/core/app/views/Sellings/blank.html
@@ -1,10 +1,10 @@
 #{extends 'main_full.html'/}
 #{set title:'添加 Selling'/}
 #{set 'moreStyles'}
-    #{stylesheet_cdn name:'market.css'/}
+    #{stylesheet name:'market.css'/}
 #{/set}
 #{set 'moreScripts'}
-    #{script_cdn name: 'sellings/blank.coffee'/}
+    #{script name: 'sellings/blank.coffee'/}
 #{/set}
 
 <div class="span12">
