--- a/core/app/views/ShipmentReports/areaGoodsAnalyze.html
+++ b/core/app/views/ShipmentReports/areaGoodsAnalyze.html
@@ -1,7 +1,7 @@
 #{extends 'main_full.html' /}
 #{set title:'物流区域货量分析报表'/}
 #{set 'moreScripts'}
-    #{script_cdn name: 'ShipmentReports/areaGoodsAnalyze.coffee'/}
+    #{script name: 'ShipmentReports/areaGoodsAnalyze.coffee'/}
 #{/set}
 
 #{flash_alert /}
