--- a/core/app/views/ShipmentReports/cost.html
+++ b/core/app/views/ShipmentReports/cost.html
@@ -1,8 +1,8 @@
 #{extends 'main_full.html'/}
 #{set title:'物流重量与费用统计'/}
 #{set 'moreScripts'}
-    #{script_cdn name: 'highstock.js'/}
-    #{script_cdn name: 'ShipmentReports/cost.coffee'/}
+    #{script name: 'highstock.js'/}
+    #{script name: 'ShipmentReports/cost.coffee'/}
 #{/set}
 
 <div class="row-fluid">
