--- a/core/app/views/Skuchecks/blank.html
+++ b/core/app/views/Skuchecks/blank.html
@@ -1,7 +1,7 @@
 #{extends 'main.html' /}
 #{set title:"SKU_CHECK创建"/}
 #{set 'moreScripts'}
-    #{script_cdn name: 'skuchecks/skucheck.coffee'/}
+    #{script name: 'skuchecks/skucheck.coffee'/}
 #{/set}
 #{errorMsgs /}
 #{flash_alert /}
