--- a/core/app/views/Whouses/edit.html
+++ b/core/app/views/Whouses/edit.html
@@ -1,7 +1,7 @@
 #{extends 'main.html'/}
 #{set title:'修改仓库 ' + wh.name() /}
 #{set 'moreScripts'}
-    #{script_cdn name: 'whouse/blank.coffee'/}
+    #{script name: 'whouse/blank.coffee'/}
 #{/set}
 
 #{errorMsgs /}
