--- a/core/app/views/Analyzes/trafficRate.html
+++ b/core/app/views/Analyzes/trafficRate.html
@@ -1,8 +1,8 @@
 #{extends 'main_full.html' /}
 #{set title:'转化率统计报表'/}
 #{set 'moreScripts'}
-    #{script_cdn name: 'jquery.dataTables.js'/}
-    #{script_cdn name: 'analyzes/trafficrate.coffee'/}
+    #{script name: 'jquery.dataTables.js'/}
+    #{script name: 'analyzes/trafficrate.coffee'/}
 #{/set}
 
 #{info_row}
