--- a/core/app/views/Application/index.html
+++ b/core/app/views/Application/index.html
@@ -1,8 +1,8 @@
 #{extends 'main_full.html' /}
 #{set title:'Home' /}
 #{set 'moreScripts'}
-    #{script_cdn name: 'highstock.js'/}
-    #{script_cdn name: 'Application/app.coffee'/}
+    #{script name: 'highstock.js'/}
+    #{script name: 'Application/app.coffee'/}
 #{/set}
 
 #{info_row title:'FBA 仓库库存容量总览'/}
