--- a/core/app/views/CheckTasks/_show.html
+++ b/core/app/views/CheckTasks/_show.html
@@ -1,8 +1,8 @@
-#{script_cdn name: 'jquery.filedrop.js' /}
-#{script_cdn name: 'component/dropUpload.coffee'/}
-#{script_cdn name: 'checktasks/show.coffee'/}
-#{script_cdn name: 'localResize.coffee'/} <!-- LocalResize Github 地址: https://github.com/think2011/localResizeIMG-2 --!>
-#{script_cdn name: 'localResize.ui.coffee'/}
+#{script name: 'jquery.filedrop.js' /}
+#{script name: 'component/dropUpload.coffee'/}
+#{script name: 'checktasks/show.coffee'/}
+#{script name: 'localResize.coffee'/} <!-- LocalResize Github 地址: https://github.com/think2011/localResizeIMG-2 --!>
+#{script name: 'localResize.ui.coffee'/}
 
 <div class="row-fluid">
   <div>
