--- a/core/app/views/CheckTasks/showList.html
+++ b/core/app/views/CheckTasks/showList.html
@@ -1,8 +1,8 @@
 #{extends 'main_full.html'/}
 #{set title:"质检信息查看列表" /}
 #{set 'moreScripts'}
-    #{script_cdn name: 'jquery.dataTables.js'/}
-    #{script_cdn name: 'checktasks/showList.coffee'/}
+    #{script name: 'jquery.dataTables.js'/}
+    #{script name: 'checktasks/showList.coffee'/}
 #{/set}
 #{flash_alert /}
 #{errorMsgs /}
