--- a/core/app/views/Cooperators/newCooperItem.html
+++ b/core/app/views/Cooperators/newCooperItem.html
@@ -1,8 +1,8 @@
 #{extends 'main.html'/}
 #{set title:"创建新的 CooperItem" /}
 #{set 'moreScripts'}
-    #{script_cdn name: 'cooperators/newCooperItem.coffee'/}
-    #{script_cdn name: 'jquery.validate.min.js'/}
+    #{script name: 'cooperators/newCooperItem.coffee'/}
+    #{script name: 'jquery.validate.min.js'/}
 #{/set}
 <style type="text/css">
     span.add-on select{
