--- a/core/app/views/Elcuk/editShipDayConfigs.html
+++ b/core/app/views/Elcuk/editShipDayConfigs.html
@@ -1,7 +1,7 @@
 #{extends 'main.html'/}
 #{set title:"修改参数值" /}
 #{set 'moreScripts'}
-    #{script_cdn name: 'elcuk/editConfig.coffee'/}
+    #{script name: 'elcuk/editConfig.coffee'/}
 #{/set}
 #{errorMsgs /}
 #{flash_alert /}
