--- a/core/app/views/FeeTypes/index.html
+++ b/core/app/views/FeeTypes/index.html
@@ -1,10 +1,10 @@
 #{extends 'main_full.html'/}
 #{set title:'FeeTypes'/}
 #{set 'moreStyles'}
-    #{stylesheet_cdn name:'feetypes.css'/}
+    #{stylesheet name:'feetypes.css'/}
 #{/set}
 #{set 'moreScripts'}
-    #{script_cdn name: 'feetypes.coffee'/}
+    #{script name: 'feetypes.coffee'/}
 #{/set}
 
 #{info_row }
