--- a/core/app/views/Listings/index.html
+++ b/core/app/views/Listings/index.html
@@ -1,10 +1,10 @@
 #{extends 'main_full.html'/}
 #{set title:'Listing'/}
 #{set 'moreStyles'}
-    #{stylesheet_cdn name:'market.css' /}
+    #{stylesheet name:'market.css' /}
 #{/set}
 #{set 'moreScripts'}
-    ##{script_cdn name: 'listings/listings.coffee'/}
+    ##{script name: 'listings/listings.coffee'/}
 #{/set}
 
 #{flash_alert /}
