--- a/core/app/views/OutboundRecords/blank.html
+++ b/core/app/views/OutboundRecords/blank.html
@@ -1,7 +1,7 @@
 #{extends 'main.html' /}
 #{set title:'创建出库记录' /}
 #{set 'moreScripts'}
-    #{script_cdn name: 'outboundrecords/blank.coffee'/}
+    #{script name: 'outboundrecords/blank.coffee'/}
 #{/set}
 #{errorMsgs /}
 #{flash_alert/}
