--- a/core/app/views/ProcureUnits/blank.html
+++ b/core/app/views/ProcureUnits/blank.html
@@ -1,7 +1,7 @@
 #{extends 'main.html' /}
 #{set title:'ProcureUnit Create' /}
 #{set 'moreScripts'}
-    #{script_cdn name: 'procureunits/blank.coffee'/}
+    #{script name: 'procureunits/blank.coffee'/}
 #{/set}
 #{errorMsgs /}
 #{flash_alert/}
