--- a/core/app/views/ProcureUnits/exportLogs.html
+++ b/core/app/views/ProcureUnits/exportLogs.html
@@ -1,6 +1,6 @@
 #{extends 'main_full.html' /}
 #{set 'moreScripts'}
-    #{script_cdn name: 'procureunits/exportLogs.coffee'/}
+    #{script name: 'procureunits/exportLogs.coffee'/}
 #{/set}
 
 #{info_row}
