--- a/core/app/views/ProcureUnits/showactiviti.html
+++ b/core/app/views/ProcureUnits/showactiviti.html
@@ -1,10 +1,10 @@
 #{render '_css_header.html' /}
 #{get 'moreStyles' /}
 #{render '_js_header.html' /}
-#{script_cdn name: 'jquery.filedrop.js'/}
-#{script_cdn name: 'component/dropUpload.coffee'/}
-#{script_cdn name: 'procureunits/showactiviti.coffee'/}
-#{script_cdn name: 'procureunits/blank.coffee'/}
+#{script name: 'jquery.filedrop.js'/}
+#{script name: 'component/dropUpload.coffee'/}
+#{script name: 'procureunits/showactiviti.coffee'/}
+#{script name: 'procureunits/blank.coffee'/}
 
 #{errorMsgs /}
 #{flash_alert/}
