--- a/core/app/views/Products/saleAmazon.html
+++ b/core/app/views/Products/saleAmazon.html
@@ -1,13 +1,13 @@
 #{extends 'main_full.html'/}
 #{set title: '提交 Feed 创建 Selling' /}
 #{set 'moreStyles'}
-    #{stylesheet_cdn name:'market.css'/}
+    #{stylesheet name:'market.css'/}
 #{/set}
 #{set 'moreScripts'}
-    #{script_cdn name: 'editor/kindeditor-min.js'/}
-    #{script_cdn name: 'editor/lang/zh_CN.js'/}
-    #{script_cdn name: 'component/amazon.coffee'/}
-    #{script_cdn name: 'products/saleAmazon.coffee'/}
+    #{script name: 'editor/kindeditor-min.js'/}
+    #{script name: 'editor/lang/zh_CN.js'/}
+    #{script name: 'component/amazon.coffee'/}
+    #{script name: 'products/saleAmazon.coffee'/}
 #{/set}
 <div id='check_modal' class="modal hide fade">
   <div class="modal-header">
