--- a/core/app/views/Profits/index.html
+++ b/core/app/views/Profits/index.html
@@ -1,8 +1,8 @@
 #{extends 'main_full.html'/}
 #{set title:"SKU利润分析" /}
 #{set 'moreScripts'}
-    #{script_cdn name: 'jquery.dataTables.js'/}
-    #{script_cdn name: 'profits/index.coffee'/}
+    #{script name: 'jquery.dataTables.js'/}
+    #{script name: 'profits/index.coffee'/}
 #{/set}
 
 #{info_row}
