--- a/core/app/views/ReportDownloads/index.html
+++ b/core/app/views/ReportDownloads/index.html
@@ -1,8 +1,8 @@
 #{extends 'main_full.html'/}
 #{set title:"运营报表下载" /}
 #{set 'moreScripts'}
-    #{script_cdn name: 'jquery.dataTables.js'/}
-    #{script_cdn name: 'ReportDownloads/index.coffee'/}
+    #{script name: 'jquery.dataTables.js'/}
+    #{script name: 'ReportDownloads/index.coffee'/}
 #{/set}
 
 #{info_row}
