--- a/core/app/views/Shipments/show.html
+++ b/core/app/views/Shipments/show.html
@@ -1,13 +1,13 @@
 #{extends 'main_full.html' /}
 #{set title:"运输单 #" + ship.id /}
 #{set 'moreScripts'}
-    #{script_cdn name: 'jquery.filedrop.js'/}
-    #{script_cdn name: 'component/dropUpload.coffee'/}
-    #{script_cdn name: 'highstock.js'/}
-    #{script_cdn name: 'timeline/timeline_js/timeline-api.js'/}
-    #{script_cdn name: 'analyzes/timeline.coffee'/}
-    #{script_cdn name: 'shipments/show.coffee'/}
-    #{script_cdn name: 'shipments/paymentunits.coffee'/}
+    #{script name: 'jquery.filedrop.js'/}
+    #{script name: 'component/dropUpload.coffee'/}
+    #{script name: 'highstock.js'/}
+    #{script name: 'timeline/timeline_js/timeline-api.js'/}
+    #{script name: 'analyzes/timeline.coffee'/}
+    #{script name: 'shipments/show.coffee'/}
+    #{script name: 'shipments/paymentunits.coffee'/}
 #{/set}
 
 <ul class="nav nav-tabs" id="below_tab">
