--- a/core/app/views/WhouseItems/index.html
+++ b/core/app/views/WhouseItems/index.html
@@ -1,8 +1,8 @@
 #{extends 'main_full.html'/}
 #{set title:'库存'/}
 #{set 'moreScripts'}
-    #{script_cdn name: 'component/pagination.coffee'/}
-    #{script_cdn name: 'whouseitems/index.coffee'/}
+    #{script name: 'component/pagination.coffee'/}
+    #{script name: 'whouseitems/index.coffee'/}
 #{/set}
 #{flash_alert /}
 
