--- a/core/app/views/Finances/skuProfitAnalyse.html
+++ b/core/app/views/Finances/skuProfitAnalyse.html
@@ -1,10 +1,10 @@
 #{extends 'main_full.html'/}
 #{set title:"SKU销售利润成本分析报表" /}
 #{set 'moreScripts'}
-    #{script name: 'jquery.dataTables.js'/}
-    #{script name: 'bootstrap-multiselect.js'/}
-    #{stylesheet name:'bootstrap-multiselect.css'/}
-    #{script name: 'Finances/skuProfitAnalyse.coffee'/}
+    #{script 'jquery.dataTables.js'/}
+    #{script 'bootstrap-multiselect.js'/}
+    #{stylesheet 'bootstrap-multiselect.css'/}
+    #{script 'Finances/skuProfitAnalyse.coffee'/}
 #{/set}
 
 #{info_row}
