--- a/core/app/views/_css_header.html
+++ b/core/app/views/_css_header.html
@@ -1,8 +1,8 @@
-#{stylesheet name:'bootstrap.min.css'/}
-#{stylesheet name:'bootstrapSwitch.css'/}
-#{stylesheet name:'font-awesome.css'/}
-#{stylesheet name:'jquery.loadmask.css'/}
-#{stylesheet name: 'selectize.default.css'/}
-#{stylesheet name:'dateinput.css'/}
-#{stylesheet name:'bootstrap-datetimepicker.min.css'/}
-#{stylesheet name:'main.css'/}
+#{stylesheet 'bootstrap.min.css'/}
+#{stylesheet 'bootstrapSwitch.css'/}
+#{stylesheet 'font-awesome.css'/}
+#{stylesheet 'jquery.loadmask.css'/}
+#{stylesheet 'selectize.default.css'/}
+#{stylesheet 'dateinput.css'/}
+#{stylesheet 'bootstrap-datetimepicker.min.css'/}
+#{stylesheet 'main.css'/}
