--- a/core/app/views/Payments/index.html
+++ b/core/app/views/Payments/index.html
@@ -1,10 +1,10 @@
 #{extends 'main_full.html' /}
 #{set title:"付款单列表"  /}
 #{set 'moreStyles'}
-    #{stylesheet name:'payments.css'/}
+    #{stylesheet 'payments.css'/}
 #{/set}
 #{set 'moreScripts'}
-    #{script name: 'component/pagination.coffee'/}
+    #{script 'component/pagination.coffee'/}
 #{/set}
 
 #{form @Payments.index(), class:'search_form', id:'payments_form', method:'POST'}
