--- a/core/app/views/AnalyzeSkus/index.html
+++ b/core/app/views/AnalyzeSkus/index.html
@@ -1,10 +1,10 @@
 #{extends 'main_full.html'/}
 #{set title:'Analyze'/}
 #{set 'moreScripts'}
-    #{script name: 'jquery.dataTables.js'/}
-    #{script name: 'highstock.js'/}
-    #{script name: 'timeline/timeline_js/timeline-api.js'/}
-    #{script name: 'analyzeskus/analyzeskus.coffee'/}
+    #{script 'jquery.dataTables.js'/}
+    #{script 'highstock.js'/}
+    #{script 'timeline/timeline_js/timeline-api.js'/}
+    #{script 'analyzeskus/analyzeskus.coffee'/}
 #{/set}
 
 
