--- a/core/app/views/Deliveryments/show.html
+++ b/core/app/views/Deliveryments/show.html
@@ -1,11 +1,11 @@
 #{extends 'main_full.html'/}
 #{set title:"采购单 #" + dmt.id /}
 #{set 'moreScripts'}
-    #{script name: 'jquery.filedrop.js'/}
-    #{script name: 'component/dropUpload.coffee'/}
-    #{script name: 'timeline/timeline_js/timeline-api.js'/}
-    #{script name: 'analyzes/timeline.coffee'/}
-    #{script name: 'deliveryments/show.coffee'/}
+    #{script 'jquery.filedrop.js'/}
+    #{script 'component/dropUpload.coffee'/}
+    #{script 'timeline/timeline_js/timeline-api.js'/}
+    #{script 'analyzes/timeline.coffee'/}
+    #{script 'deliveryments/show.coffee'/}
 #{/set}
 
 #{errorMsgs /}
