--- a/core/app/views/Familys/index.html
+++ b/core/app/views/Familys/index.html
@@ -1,7 +1,7 @@
 #{extends 'main_full.html'/}
 #{set title:'Family' /}
 #{set 'moreScripts'}
-    #{script name: 'products/family.coffee'/}
+    #{script 'products/family.coffee'/}
 #{/set}
 
 #{flash_alert /}
