--- a/core/app/views/InboundRecords/blank.html
+++ b/core/app/views/InboundRecords/blank.html
@@ -1,7 +1,7 @@
 #{extends 'main.html' /}
 #{set title:'添加其他入库' /}
 #{set 'moreScripts'}
-    #{script name: 'inboundrecords/blank.coffee'/}
+    #{script 'inboundrecords/blank.coffee'/}
 #{/set}
 #{errorMsgs /}
 #{flash_alert/}
