--- a/core/app/views/MailsRecords/index.html
+++ b/core/app/views/MailsRecords/index.html
@@ -1,8 +1,8 @@
 #{extends 'main_full.html'/}
 #{set title:'Mail Records'/}
 #{set 'moreScripts'}
-    #{script name: 'highstock.js'/}
-    #{script name: 'mailsrecord/mailsrecord.coffee'/}
+    #{script 'highstock.js'/}
+    #{script 'mailsrecord/mailsrecord.coffee'/}
 #{/set}
 <div class="container">
   <form id="params" class="search_form">
