--- a/core/app/views/Orders/show.html
+++ b/core/app/views/Orders/show.html
@@ -2,7 +2,7 @@
     #{extends 'main.html'/}
     #{set title:'Orders'/}
     #{set 'moreScripts'}
-        #{script name: 'orders/orders.coffee'/}
+        #{script 'orders/orders.coffee'/}
     #{/set}
 #{/ifnot}
 
