--- a/core/app/views/ProcureUnits/edit.html
+++ b/core/app/views/ProcureUnits/edit.html
@@ -1,7 +1,7 @@
 #{extends 'main.html' /}
 #{set title:'ProcureUnit #' + unit.id + ' Edit' /}
 #{set 'moreScripts'}
-    #{script name: 'procureunits/blank.coffee'/}
+    #{script 'procureunits/blank.coffee'/}
 #{/set}
 
 #{errorMsgs /}
