--- a/core/app/views/SaleOpTargets/show.html
+++ b/core/app/views/SaleOpTargets/show.html
@@ -1,7 +1,7 @@
 #{extends 'main.html' /}
 #{set title:"运营年度销售目标#" + yearSt.id /}
 #{set 'moreScripts'}
-    #{script name: 'saleOpTargets/blank.coffee'/}
+    #{script 'saleOpTargets/blank.coffee'/}
 #{/set}
 
 #{errorMsgs /}
