--- a/core/app/views/ShipmentReports/arrivalRate.html
+++ b/core/app/views/ShipmentReports/arrivalRate.html
@@ -1,9 +1,9 @@
 #{extends 'main_full.html'/}
 #{set title:'运输到货率统计'/}
 #{set 'moreScripts'}
-    #{script name: 'highstock.js'/}
-    #{script name: 'jquery.dataTables.js'/}
-    #{script name: 'ShipmentReports/arrivalRate.coffee'/}
+    #{script 'highstock.js'/}
+    #{script 'jquery.dataTables.js'/}
+    #{script 'ShipmentReports/arrivalRate.coffee'/}
 #{/set}
 
 <ul class="nav nav-tabs">
