--- a/core/app/views/AnalyzeSkus/skuSalesReport.html
+++ b/core/app/views/AnalyzeSkus/skuSalesReport.html
@@ -1,7 +1,7 @@
 #{extends 'main_full.html'/}
 #{set title:'自定义销售报表'/}
 #{set 'moreScripts'}
-    #{script name: 'analyzeskus/skuSalesReport.coffee'/}
+    #{script 'analyzeskus/skuSalesReport.coffee'/}
 #{/set}
 
 <div class="row-fluid" style="margin-top:15px">
