--- a/core/app/views/Analyzes/pie.html
+++ b/core/app/views/Analyzes/pie.html
@@ -1,7 +1,7 @@
 <html>
 <head>
-#{script name: 'jquery-1.12.3.min.js'/}
-#{script name: 'highstock.js'/}
+#{script 'jquery-1.12.3.min.js'/}
+#{script 'highstock.js'/}
   <script type="text/javascript" src="/public/javascripts/main.js"></script>
 </head>
 </html>
