--- a/core/app/views/Application/timeline.html
+++ b/core/app/views/Application/timeline.html
@@ -1,7 +1,7 @@
 #{extends 'main_full.html' /}
 #{set title:'Home' /}
 #{set 'moreScripts'}
-    #{script name: 'timeline/timeline_js/timeline-api.js'/}
+    #{script 'timeline/timeline_js/timeline-api.js'/}
 #{/set}
 <script type="text/javascript">
 
