--- a/core/app/views/Applys/procure.html
+++ b/core/app/views/Applys/procure.html
@@ -1,7 +1,7 @@
 #{extends 'main_full.html'/}
 #{set title:"请款单 ${apply.serialNumber}" /}
 #{set 'moreScripts'}
-    #{script name: 'deliveryments/procure.coffee'/}
+    #{script 'deliveryments/procure.coffee'/}
 #{/set}
 #{flash_alert /}
 <div class="row-fluid">
