--- a/core/app/views/CheckTasks/checkerList.html
+++ b/core/app/views/CheckTasks/checkerList.html
@@ -1,8 +1,8 @@
 #{extends 'main_full.html'/}
 #{set title:"质检员任务列表" /}
 #{set 'moreScripts'}
-    #{script name: 'jquery.dataTables.js'/}
-    #{script name: 'checktasks/checkerlist.coffee'/}
+    #{script 'jquery.dataTables.js'/}
+    #{script 'checktasks/checkerlist.coffee'/}
 #{/set}
 
 #{flash_alert /}
