--- a/core/app/views/CheckTasks/checklist.html
+++ b/core/app/views/CheckTasks/checklist.html
@@ -1,8 +1,8 @@
 #{extends 'main_full.html'/}
 #{set title:"质检任务列表 (${tasklist.size()})" /}
 #{set 'moreScripts'}
-    #{script name: 'jquery.dataTables.js'/}
-    #{script name: 'checktasks/checklist.coffee'/}
+    #{script 'jquery.dataTables.js'/}
+    #{script 'checktasks/checklist.coffee'/}
 #{/set}
 
 #{info_row}
