--- a/core/app/views/Cooperators/index.html
+++ b/core/app/views/Cooperators/index.html
@@ -1,8 +1,8 @@
 #{extends 'main_full.html'/}
 #{set title:"Cooperators(${coopers.size()})" /}
 #{set 'moreScripts'}
-    #{script name: 'cooperators/index.coffee'/}
-    #{script name: 'jquery.validate.min.js'/}
+    #{script 'cooperators/index.coffee'/}
+    #{script 'jquery.validate.min.js'/}
 #{/set}
 
 #{if flash.success}
