--- a/core/app/views/Cooperators/newCooper.html
+++ b/core/app/views/Cooperators/newCooper.html
@@ -1,8 +1,8 @@
 #{extends 'main.html'/}
 #{set title:"创建新的 CooperItem" /}
 #{set 'moreScripts'}
-    #{script name: 'cooperators/newCooper.coffee'/}
-    #{script name: 'jquery.validate.min.js'/}
+    #{script 'cooperators/newCooper.coffee'/}
+    #{script 'jquery.validate.min.js'/}
 #{/set}
 
 #{errorMsgs /}
