--- a/core/app/views/Deliveryments/index.html
+++ b/core/app/views/Deliveryments/index.html
@@ -1,8 +1,8 @@
 #{extends 'main_full.html'/}
 #{set title:"采购单列表 (${deliveryments.size()})" /}
 #{set 'moreScripts'}
-    #{script name: 'component/pagination.coffee'/}
-    #{script name: 'deliveryments/index.coffee'/}
+    #{script 'component/pagination.coffee'/}
+    #{script 'deliveryments/index.coffee'/}
 #{/set}
 
 #{info_row}
