--- a/core/app/views/InboundRecords/index.html
+++ b/core/app/views/InboundRecords/index.html
@@ -1,8 +1,8 @@
 #{extends 'main_full.html'/}
 #{set title:'入库记录(' + records.size() + ')'/}
 #{set 'moreScripts'}
-    #{script name: 'component/pagination.coffee'/}
-    #{script name: 'inboundrecords/index.coffee'/}
+    #{script 'component/pagination.coffee'/}
+    #{script 'inboundrecords/index.coffee'/}
 #{/set}
 #{flash_alert /}
 
