--- a/core/app/views/ProcureUnits/index.html
+++ b/core/app/views/ProcureUnits/index.html
@@ -1,8 +1,8 @@
 #{extends 'main_full.html' /}
 #{set title:"采购单元列表 (${p.count()})"  /}
 #{set 'moreScripts'}
-    #{script name: 'component/pagination.coffee'/}
-    #{script name: 'procureunits/index.coffee'/}
+    #{script 'component/pagination.coffee'/}
+    #{script 'procureunits/index.coffee'/}
 #{/set}
 #{errorMsgs /}
 #{flash_alert /}
