--- a/core/app/views/ReportDownloads/procureReportsIndex.html
+++ b/core/app/views/ReportDownloads/procureReportsIndex.html
@@ -1,8 +1,8 @@
 #{extends 'main_full.html'/}
 #{set title:"运营报表下载" /}
 #{set 'moreScripts'}
-    #{script name: 'jquery.dataTables.js'/}
-    #{script name: 'ReportDownloads/index.coffee'/}
+    #{script 'jquery.dataTables.js'/}
+    #{script 'ReportDownloads/index.coffee'/}
 #{/set}
 
 #{info_row}
