--- a/core/app/views/SaleOpTargets/seasonSplit.html
+++ b/core/app/views/SaleOpTargets/seasonSplit.html
@@ -1,7 +1,7 @@
 #{extends 'main.html' /}
 #{set title:"Category销售目标#" + categorySt.id /}
 #{set 'moreScripts'}
-    #{script name: 'saleOpTargets/marketsplit.coffee'/}
+    #{script 'saleOpTargets/marketsplit.coffee'/}
 #{/set}
 #{errorMsgs /}
 #{flash_alert /}
