--- a/core/app/views/SaleTargets/blank.html
+++ b/core/app/views/SaleTargets/blank.html
@@ -1,7 +1,7 @@
 #{extends 'main.html' /}
 #{set title:"新增年度目标"/}
 #{set 'moreScripts'}
-    #{script name: 'saleTargets/blank.coffee'/}
+    #{script 'saleTargets/blank.coffee'/}
 #{/set}
 #{errorMsgs /}
 #{flash_alert /}
