--- a/core/app/views/SaleTargets/split.html
+++ b/core/app/views/SaleTargets/split.html
@@ -1,7 +1,7 @@
 #{extends 'main.html' /}
 #{set title:"Category销售目标#" + categorySt.id /}
 #{set 'moreScripts'}
-    #{script name: 'saleTargets/split.coffee'/}
+    #{script 'saleTargets/split.coffee'/}
 #{/set}
 
 #{errorMsgs /}
