--- a/core/app/views/Shipments/compenReport.html
+++ b/core/app/views/Shipments/compenReport.html
@@ -1,8 +1,8 @@
 #{extends 'main_full.html' /}
 #{set title:'运输单丢失率报表'/}
 #{set 'moreScripts'}
-    #{script name: 'jquery.dataTables.js'/}
-    #{script name: 'analyzes/trafficrate.coffee'/}
+    #{script 'jquery.dataTables.js'/}
+    #{script 'analyzes/trafficrate.coffee'/}
 #{/set}
 
 #{info_row}
