--- a/core/app/views/StockRecords/index.html
+++ b/core/app/views/StockRecords/index.html
@@ -1,8 +1,8 @@
 #{extends 'main_full.html'/}
 #{set title:'库存异动记录(' + records.size() + ')'/}
 #{set 'moreScripts'}
-    #{script name: 'component/pagination.coffee'/}
-    #{script name: 'stockrecords/index.coffee'/}
+    #{script 'component/pagination.coffee'/}
+    #{script 'stockrecords/index.coffee'/}
 #{/set}
 #{flash_alert /}
 
