--- a/core/app/views/Templates/show.html
+++ b/core/app/views/Templates/show.html
@@ -1,7 +1,7 @@
 #{extends 'main_full.html'/}
 #{set title:'Template' /}
 #{set 'moreScripts'}
-  #{script name: 'template/show.coffee'/}
+  #{script 'template/show.coffee'/}
 #{/set}
 
 <div class="row-fluid">
