--- a/core/app/views/_js_header.html
+++ b/core/app/views/_js_header.html
@@ -1,19 +1,19 @@
-#{script name:'jquery-1.12.3.min.js'/}
-#{script name: 'lodash.min.js'/}
-#{script name: 'noty/jquery.noty.js'/}
-#{script name: 'noty/themes/default.js'/}
-#{script name: 'noty/layouts/top.js'/}
-#{script name: 'noty/layouts/topCenter.js'/}
-#{script name: 'rails.js'/}
-#{script name: 'jquery.color.js'/}
-#{script name: 'bootstrap.min.js'/}
-#{script name: 'bootstrapSwitch.js'/}
-#{script name: 'jquery.loadmask.min.js'/}
-#{script name: 'jquery.highlight.js'/}
-#{script name: 'jquery.form.js'/}
-#{script name: 'dateinput.js'/}
-#{script name: 'selectize.js'/}
-#{script name: 'bootstrap-datetimepicker.min.js'/}
-#{script name: 'component/notify.coffee'/}
-#{script name: 'component/popover.coffee'/}
-#{script name: 'main.js'/}
+#{script 'jquery-1.12.3.min.js'/}
+#{script 'lodash.min.js'/}
+#{script 'noty/jquery.noty.js'/}
+#{script 'noty/themes/default.js'/}
+#{script 'noty/layouts/top.js'/}
+#{script 'noty/layouts/topCenter.js'/}
+#{script 'rails.js'/}
+#{script 'jquery.color.js'/}
+#{script 'bootstrap.min.js'/}
+#{script 'bootstrapSwitch.js'/}
+#{script 'jquery.loadmask.min.js'/}
+#{script 'jquery.highlight.js'/}
+#{script 'jquery.form.js'/}
+#{script 'dateinput.js'/}
+#{script 'selectize.js'/}
+#{script 'bootstrap-datetimepicker.min.js'/}
+#{script 'component/notify.coffee'/}
+#{script 'component/popover.coffee'/}
+#{script 'main.js'/}
