--- a/core/app/views/CheckTasks/_show.html
+++ b/core/app/views/CheckTasks/_show.html
@@ -1,7 +1,7 @@
 #{script 'jquery.filedrop.js' /}
 #{script 'component/dropUpload.coffee'/}
 #{script 'checktasks/show.coffee'/}
-#{script 'localResize.coffee'/} <!-- LocalResize Github 地址: https://github.com/think2011/localResizeIMG-2 --!>
+#{script 'localResize.coffee'/} <!-- LocalResize Github 地址: https://github.com/think2011/localResizeIMG-2 -->
 #{script 'localResize.ui.coffee'/}
 
 <div class="row-fluid">
@@ -44,8 +44,6 @@
       #{/if}
       </table>
     </form>
-    #{include 'CheckTasks/_uploadFile.html'/}
+  #{include 'CheckTasks/_uploadFile.html'/}
   </div>
-
-
 </div>
