*   增加供应商展示与搜索支持

--- a/core/app/views/InboundRecords/index.html
+++ b/core/app/views/InboundRecords/index.html
@@ -74,8 +74,9 @@
           <th>来源</th>
           <th>质检任务 ID</th>
           <th>物料采购 ID</th>
-          <th>产品编码</th>
+          <th>SKU</th>
           <th>产品名称</th>
+          <th>供应商</th>
           <th>FBA</th>
           <th>FnSKU</th>
           <th>FBA 仓库</th>
@@ -115,6 +116,14 @@
           </td>
           <td style="max-width: 280px;">${r.stockObj?.name()}</td>
           <td>${attrs.get('fba')}</td>
+          <td>
+              #{set cooperator: r.cooperator()/}
+              #{if cooperator == null}
+                <a href="@{Cooperators.show(cooperator)}">
+                ${cooperator.name}
+                </a>
+              #{/if}
+          </td>
           <td style="min-width:130px;">
             <a href="${r.stockObj?.sellingLabelLink()}" class="btn btn-success">
             ${r.stockObj?.fnsku()} <i class="icon-download-alt"></i>
