--- a/core/app/views/OutboundRecords/index.html
+++ b/core/app/views/OutboundRecords/index.html
@@ -84,11 +84,11 @@
           </th>
           <th>ID</th>
           <th>仓库</th>
-          <th>来源</th>
+          <th>出库类型</th>
           <th>状态</th>
           <th>出货计划 ID</th>
-          <th>成品编码</th>
-          <th>名称</th>
+          <th>SKU</th>
+          <th>产品名称</th>
           <th>FBA</th>
           <th>去往国家</th>
           <th>运输方式</th>
