页面上显示供应商，显示的对应全程的都改成显示简称

--- a/core/app/views/DeliverPlans/show.html
+++ b/core/app/views/DeliverPlans/show.html
@@ -41,7 +41,7 @@
         </tr>
         <tr>
           <th>供应商</th>
-          <td>${dp.cooperator?.fullName}</td>
+          <td>${dp.cooperator?.name}</td>
           <th>状态</th>
           <td>${dp.state.label()}</td>
         </tr>
