--- a/core/app/views/Deliveryments/index.html
+++ b/core/app/views/Deliveryments/index.html
@@ -108,7 +108,7 @@
           </td>
           <td style="color:${dmt.state.rgb()}">${dmt.state.label()}</td>
           <td>${dmt.deliveryType?.label()}</td>
-          <td>${dmt.supplier()?.fullName}</td>
+          <td>${dmt.supplier()?.name}</td>
           <td>#{time_tooltip time:twoDeliveryDate._1/}</td>
           <td>#{time_tooltip time:twoDeliveryDate._2/}</td>
           <td>
