--- a/core/app/views/Deliveryments/show.html
+++ b/core/app/views/Deliveryments/show.html
@@ -44,7 +44,7 @@
         </tr>
         <tr>
           <th>供应商</th>
-          <td>${dmt.cooperator?.fullName}</td>
+          <td>${dmt.cooperator?.name}</td>
 
           <th>下单时间</th>
           <td>
