--- a/core/app/views/ProcureUnits/splitUnit.html
+++ b/core/app/views/ProcureUnits/splitUnit.html
@@ -26,7 +26,7 @@
         <td>${unit.whouse?.name}</td>
 
         <th>供应商</th>
-        <td>${unit.cooperator.fullName}</td>
+        <td>${unit.cooperator.name}</td>
 
         <th>采购数量</th>
         <td>${unit.qty()}</td>
