--- a/core/app/views/DeliverPlans/index.html
+++ b/core/app/views/DeliverPlans/index.html
@@ -66,7 +66,7 @@
               <span>${dp.name}</span>
               <span class="badge badge-info">${dp.units.size()}</span>
             </td>
-            <td>${dp.supplier()?.fullName}</td>
+            <td>${dp.supplier()?.name}</td>
             <td>${dp.state.label()}</td>
             <td>${dp.handler.username}</td>
             <td>#{time_tooltip time:dp.createDate/}</td>
