--- a/core/app/views/OutboundRecords/blank.html
+++ b/core/app/views/OutboundRecords/blank.html
@@ -12,21 +12,55 @@
   <tr>
     <th>物料编码</th>
     <td>
-      <input type="text" name="record.stockObj.stockObjId" value="${record.stockObj?.stockObjId}">
+      <input type="text" name="record.stockObj.stockObjId" value="${record.stockObj?.stockObjId}" required>
       <input type="hidden" name="record.stockObj.stockObjType" value="${record.stockObj?.stockObjType}">
     </td>
 
-    <th>名称</th>
-    <td name="stock_name" style="width: 40%;"></td>
+    <th>产品名称</th>
+    <td style="width: 40%;">
+      <input type="text" name="stock_name" value="${record.stockObj?.name()}" class="input-xxlarge" required>
+    </td>
   </tr>
   <tr>
-    <th>仓库</th>
-    <td colspan="3">
+    <th>仓库名称</th>
+    <td>
       <select name="record.whouse.id">
           #{list items:whouses, as:'whouse'}
             <option ${whouse.id == record.whouse?.id ? 'selected' : ''} value="${whouse.id}">
             ${whouse.name}
             </option>
+          #{/list}
+      </select>
+    </td>
+
+    <th>出库类别</th>
+    <td>
+      <select name="record.type">
+          #{list items: models.whouse.OutboundRecord.T.values(), as: 't'}
+            <option value="${t.name()}">${t.label()}</option>
+          #{/list}
+      </select>
+    </td>
+  </tr>
+  <tr>
+    <th>出库对象</th>
+    <td>
+      <select name="record.targetId" style="width: 230px;" required>
+          #{list items:shippers, as: 'ship'}
+            <option ${ship.id.toString() == record.targetId ? 'selected' : ''} value="${ship.id}">
+            ${ship.name}
+            </option>
+          #{/list}
+      </select>
+    </td>
+
+    <th>去往国家</th>
+    <td>
+      <select name="record.market" name="record.market" style="width: 230px;" required>
+        <option value="">去往国家</option>
+          #{list items:models.market.M.amazonVals(), as:'m'}
+            <option ${m.name().equals(record.market) ? 'selected' : ''} value="${m.name()}">${m.marketAndWhouseMapping()
+            }</option>
           #{/list}
       </select>
     </td>
@@ -40,29 +74,6 @@
     <th>产品条码</th>
     <td>
       <input type="text" name="record.productCode" value="${record.productCode}">
-    </td>
-  </tr>
-  <tr>
-    <th>去往国家</th>
-    <td>
-      <select name="record.market" class="inline" name="record.market">
-        <option value="">去往国家</option>
-          #{list items:models.market.M.amazonVals(), as:'m'}
-            <option ${m == record.market ? 'selected' : ''} value="${m.name()}">${m.marketAndWhouseMapping()}</option>
-          #{/list}
-      </select>
-    </td>
-
-    <th>出库对象</th>
-    <td>
-      <select name="record.targetId" style="width: 150px;">
-        <option value="">运输商</option>
-          #{list items:shippers, as: 'ship'}
-            <option ${ship.id.toString() == record.targetId ? 'selected' : ''} value="${ship.id}">
-            ${ship.name}
-            </option>
-          #{/list}
-      </select>
     </td>
   </tr>
   <tr>
@@ -84,7 +95,7 @@
   <tr>
     <th>预计出库数量</th>
     <td>
-      <input type="text" name="record.planQty" value="${record.planQty}">
+      <input type="text" name="record.planQty" value="${record.planQty}" required>
     </td>
 
     <th>实际出库数量</th>
