--- a/core/app/views/OutboundRecords/blank.html
+++ b/core/app/views/OutboundRecords/blank.html
@@ -37,7 +37,7 @@
     <td>
       <select name="record.type">
           #{list items: models.whouse.OutboundRecord.T.values(), as: 't'}
-            <option value="${t.name()}">${t.label()}</option>
+            <option value="${t.name()}" ${record.type == t ? 'selected' : ''}>${t.label()}</option>
           #{/list}
       </select>
     </td>
@@ -45,7 +45,7 @@
   <tr>
     <th>出库对象</th>
     <td>
-      <select name="record.targetId" style="width: 230px;" required>
+      <select name="record.targetId" style="width: 230px;">
           #{list items:shippers, as: 'ship'}
             <option ${ship.id.toString() == record.targetId ? 'selected' : ''} value="${ship.id}">
             ${ship.name}
@@ -56,10 +56,10 @@
 
     <th>去往国家</th>
     <td>
-      <select name="record.market" name="record.market" style="width: 230px;" required>
+      <select name="record.market" name="record.market" style="width: 230px;">
         <option value="">去往国家</option>
           #{list items:models.market.M.amazonVals(), as:'m'}
-            <option ${m.name().equals(record.market) ? 'selected' : ''} value="${m.name()}">${m.marketAndWhouseMapping()}</option>
+            <option ${m.name().equals(record.market) ? 'selected' : ''} value="${m.marketAndWhouseMapping()}">${m.marketAndWhouseMapping()}</option>
           #{/list}
       </select>
     </td>
@@ -94,18 +94,18 @@
   <tr>
     <th>预计出库数量</th>
     <td>
-      <input type="text" name="record.planQty" value="${record.planQty}" required>
+      <input type="text" name="record.planQty" value="${record.planQty}" class="input-mini" required>
     </td>
 
     <th>实际出库数量</th>
     <td>
-      <input type="text" name="record.qty" value="${record.qty}">
+      <input type="text" name="record.qty" value="${record.qty}" class="input-mini">
     </td>
   </tr>
   <tr>
     <th>备注</th>
     <td colspan="4">
-      <textarea name="record.memo" rows="4" class="span10">${record.memo}</textarea>
+      <textarea name="record.memo" rows="4" class="input-block-level">${record.memo}</textarea>
     </td>
   </tr>
   <tr>
